# sol-basis-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: ci.yml
benches/: performance.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_SETUP.md  STRATEGY.md
monitoring/: grafana-dashboard.json
src/: lib.rs  main.rs
src/agent/: mod.rs  rebalancer.rs  risk_manager.rs  state_machine.rs
src/agentic/: mod.rs  performance_db.rs  reversal_detector.rs
src/config/: mod.rs
src/engines/: basis_engine.rs  funding_engine.rs  mod.rs  signal_engine.rs
src/execution/: jito.rs  jupiter.rs  mod.rs  simulator.rs  submitter.rs  tx_builder.rs
src/feeds/: drift.rs  jupiter.rs  mod.rs  pyth.rs
src/network/: event_bus.rs  mod.rs  rpc_client.rs  websocket.rs
src/position/: mod.rs
src/protocols/: mod.rs
src/state/: mod.rs
src/telemetry/: alerts.rs  logging.rs  metrics.rs  mod.rs
src/utils/: helpers.rs  mod.rs  types.rs
tests/: integration_tests.rs
